; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_getfenv.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_getfenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i32 }
%struct.TYPE_14__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_13__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_12__*, i32)* @lua_getfenv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lua_getfenv(%struct.TYPE_12__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_12__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @index2adr(%struct.TYPE_12__* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @api_checkvalidindex(%struct.TYPE_12__* %9, i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = call i32 @ttype(i32 %12)
  switch i32 %13, label %44 [
    i32 6, label %14
    i32 7, label %25
    i32 8, label %35
  ]

14:                                               ; preds = %2
  %15 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %16 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call %struct.TYPE_14__* @clvalue(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @sethvalue(%struct.TYPE_12__* %15, i32 %18, i32 %23)
  br label %49

25:                                               ; preds = %2
  %26 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %5, align 4
  %31 = call %struct.TYPE_13__* @uvalue(i32 %30)
  %32 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @sethvalue(%struct.TYPE_12__* %26, i32 %29, i32 %33)
  br label %49

35:                                               ; preds = %2
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @thvalue(i32 %40)
  %42 = call i32 @gt(i32 %41)
  %43 = call i32 @setobj(%struct.TYPE_12__* %36, i32 %39, i32 %42)
  br label %49

44:                                               ; preds = %2
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @setnilvalue(i32 %47)
  br label %49

49:                                               ; preds = %44, %35, %25, %14
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %3, align 8
  %51 = call i32 @api_incr_top(%struct.TYPE_12__* %50)
  ret void
}

declare dso_local i32 @index2adr(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @api_checkvalidindex(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @ttype(i32) #1

declare dso_local i32 @sethvalue(%struct.TYPE_12__*, i32, i32) #1

declare dso_local %struct.TYPE_14__* @clvalue(i32) #1

declare dso_local %struct.TYPE_13__* @uvalue(i32) #1

declare dso_local i32 @setobj(%struct.TYPE_12__*, i32, i32) #1

declare dso_local i32 @gt(i32) #1

declare dso_local i32 @thvalue(i32) #1

declare dso_local i32 @setnilvalue(i32) #1

declare dso_local i32 @api_incr_top(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
